# emoji-shortname

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  style.yml
src/emoji_shortname/: __init__.py
tests/: test_emoji_shortname.py
tests/roots/test-root/: conf.py  index.rst
